src/components/home/home.scss
.MagentaA11y--home-page {
  --header-flex-direction: row;
  --title-first-headline-font: var(--magentaa11y-typeset-headline-sm-strong);
  --title-second-headline-font: var(
    --magentaa11y-typeset-display-lg-xtrastrong
  );
  --header-max-height: 258px;
  --header-logo-width: fit-content;
  --logo-max-width: 410px;
  --logo-height: 100%;

  width: 100%;

  &__header {
    padding: var(--magentaa11y-spacing-size-24) var(--magentaa11y-spacing-size-40);
    height: auto;
    max-height: var(--header-max-height);
    width: 100%;
    background: linear-gradient(
      to bottom,
      var(--magentaa11y-color-brand-primary-400) 0,
      var(--magentaa11y-color-brand-grayscale-black) 75%
    );
    display: flex;
    flex-direction: var(--header-flex-direction);

    @media (min-width: 768px) {
      padding: var(--magentaa11y-spacing-size-48) var(--magentaa11y-spacing-size-80);
      background: linear-gradient(
        to right,
        var(--magentaa11y-color-brand-primary-400) 0,
        var(--magentaa11y-color-brand-grayscale-black) 75%
      );
    }

    &--title {
      flex-basis: 75%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      gap: var(--magentaa11y-spacing-size-16);
      align-items: center;

      span {
        color: var(--magentaa11y-color-brand-grayscale-white);
        word-break: keep-all;
      }

      :first-child {
        font: var(--title-first-headline-font);
      }
      :nth-child(2) {
        font: var(--title-second-headline-font);
      }
    }

    &--logo {
      width: var(--header-logo-width);
      overflow: hidden;
      display: flex;
      justify-content: center;

      img {
        object-fit: cover;
        width: 100%;
        height: var(--logo-height);
        max-width: var(--logo-max-width);
      }
    }
  }

  &__content {
    margin: 0 auto;
    padding: var(--magentaa11y-spacing-size-48) var(--magentaa11y-spacing-size-80);

    &--header {
      font: var(--magentaa11y-typeset-headline-xxl-xtrastrong);
    }
    p {
      font: var(--title-first-headline-font);
    }

    &--beige {
      background-color: var(--magentaa11y-color-brand-grayscale-200);
    }

    @media (max-width: 768px) {
      padding: var(--magentaa11y-spacing-size-24) var(--magentaa11y-spacing-size-40);
    }
  }

  @media (max-width: 768px) {
    --header-flex-direction: column;
    --title-first-headline-font: var(--magentaa11y-typeset-headline-xs-strong);
    --title-second-headline-font: var(
      --magentaa11y-typeset-display-sm-xtrastrong
    );
    --header-gradient: linear-gradient(
      to top,
      var(--magentaa11y-color-brand-primary-400) 0,
      var(--magentaa11y-color-brand-grayscale-black) 75%
    );
    --header-max-height: 355px;
    --header-logo-width: 100%;
    --logo-max-width: 40vw;
    --logo-height: auto;
  }

  .MagentaA11y {
    &__card {
      margin: 0 auto;
      max-width: 950px;
      padding: var(--magentaa11y-spacing-size-24) 0;
  
      @media (min-width: 1000px) {
        grid-template-columns: 1fr 1fr;
      }
    }
  }
}

